code mới làm 28-05

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".AfterSplashActivity" />
         <activity android:name=".DangKy_DangNhapActivity" />
         <activity android:name=".TongQuanActivity" />
-        <activity android:name=".ThemTransActivity"></activity>
+        <activity android:name=".ThemTransActivity" />
+        <activity android:name=".UpdateTransActivity"></activity>
     </application>
 
 </manifest>
